# IcoDental

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/application/: AnalysisItem.cpp  AnalysisItem.hpp  AnalysisOrchestrator.cpp  AnalysisOrchestrator.hpp  AnalysisPlan.cpp  AnalysisPlan.hpp  AnalysisRequest.cpp  AnalysisRequest.hpp
src/domain/: AnalysisResult.cpp  AnalysisResult.hpp  CaseRecord.cpp  CaseRecord.hpp  CaseStatus.cpp  CaseStatus.hpp  ImageFingerprint.cpp  ImageFingerprint.hpp  ProviderType.cpp  ProviderType.hpp
src/infrastructure/cache/: AnalysisCacheEntry.cpp  AnalysisCacheEntry.hpp  AnalysisCacheRepository.cpp  AnalysisCacheRepository.hpp  CacheDatabase.cpp  CacheDatabase.hpp
src/infrastructure/config/: AppConfig.cpp  AppConfig.hpp  ModelCatalog.cpp  ModelCatalog.hpp  SecretResolver.cpp  SecretResolver.hpp  SettingsRepository.cpp  SettingsRepository.hpp
src/infrastructure/filesystem/: FileScanner.cpp  FileScanner.hpp  ImageHasher.cpp  ImageHasher.hpp  SupportedImageTypes.cpp  SupportedImageTypes.hpp
src/infrastructure/providers/: GeminiClient.cpp  GeminiClient.hpp  GeminiPayloadBuilder.cpp  GeminiPayloadBuilder.hpp  GeminiResponseParser.cpp  GeminiResponseParser.hpp  INetworkExecutor.hpp  ProviderClient.hpp  ProviderRequest.cpp  ProviderRequest.hpp  ProviderResponse.cpp  ProviderResponse.hpp  QtNetworkExecutor.cpp  QtNetworkExecutor.hpp
tests/: CMakeLists.txt
tests/application/: AnalysisOrchestratorTests.cpp
tests/cache/: CacheRepositoryTests.cpp
tests/filesystem/: FileSystemTests.cpp
tests/providers/: FakeNetworkExecutor.hpp  GeminiClientTests.cpp  GeminiPayloadBuilderTests.cpp  GeminiResponseParserTests.cpp  ProviderModelsTests.cpp
